added pagination to friends

--- a/friends_0.html
+++ b/friends_0.html
@@ -31,12 +31,9 @@
                 var imagesURL = 'http://images.friendster.com/images';		
         </script>
         <link rel="shortcut icon" href="#">
-        <link rel="stylesheet" type="text/css" media="screen, print"
-                href="#">
-        <link rel="stylesheet" type="text/css" media="screen, print"
-                href="#">
-        <link rel="stylesheet" type="text/css" media="screen, print"
-                href="#">
+        <link rel="stylesheet" type="text/css" media="screen, print" href="#">
+        <link rel="stylesheet" type="text/css" media="screen, print" href="#">
+        <link rel="stylesheet" type="text/css" media="screen, print" href="#">
         <script>
                 window.onerror = function () { return true; };
                 function L(B, D) { var A = document.createElement("script"), C = document.documentElement.firstChild; A.type = "text/javascript"; if (A.readyState) { A.onreadystatechange = function () { if (A.readyState == "loaded" || A.readyState == "complete") { A.onreadystatechange = null; if (D !== undefined) { D(); } } } } else { A.onload = function () { if (D !== undefined) { D(); } } } A.src = B; C.insertBefore(A, C.firstChild); }
@@ -125,8 +122,7 @@
                         <div id="fssecNav" class="clearfix">
                                 <ul>
                                         <li>
-                                                <a target="_top" href="#">Log In</a><b
-                                                        class="plug">|</b>
+                                                <a target="_top" href="#">Log In</a><b class="plug">|</b>
                                         </li>
                                         <li><a target="_top" href="#">Join Friendster</a></li>
                                 </ul>
@@ -150,23 +146,19 @@
                                 <div id="meAreaBox" class="clearfix">
                                         <div id="meAreaWrapper">
                                                 <div class="userThumb">
-                                                        <div class="userThumbBg"><a
-                                                                        href="#" title=""
-                                                                        alt=""
+                                                        <div class="userThumbBg"><a href="#" title="" alt=""
                                                                         style="background:url(t.jpg) center center no-repeat"></a>
                                                         </div>
                                                 </div>
                                                 <div id="meBox">
                                                         <div id="meArea">
                                                                 <h1>
-                                                                        <a href="#"s friends
-                                                                </h1>
-                                                                <div>339 Friends so far</div>
+                                                                        <a href="#" s friends </h1>
+                                                                                <div>339 Friends so far</div>
                                                         </div>
                                                 </div>
                                                 <div id="meAction">
-                                                        <div class="btn btnOrange"><a
-                                                                        href="#"><b>Invite
+                                                        <div class="btn btnOrange"><a href="#"><b>Invite
                                                                                 Friends</b></a></div>
                                                 </div>
                                         </div>
@@ -239,7 +231,8 @@
                                                                                                                 class="friendDetailsTab">
                                                                                                                 <span
                                                                                                                         class="strong"><a
-                                                                                                                                href="#"miC
+                                                                                                                                href="#"
+                                                                                                                                miC
                                                                                                                                 miC</a></span><span
                                                                                                                         class="inlinert"></span>
                                                                                                         </div>
@@ -1273,7 +1266,8 @@
                                                                                                                 class="friendDetailsTab">
                                                                                                                 <span
                                                                                                                         class="strong"><a
-                                                                                                                                href="#"im
+                                                                                                                                href="#"
+                                                                                                                                im
                                                                                                                                 lost'</a></span><span
                                                                                                                         class="inlinert"></span>
                                                                                                         </div>
@@ -1315,7 +1309,8 @@
                                                                                                                 class="friendDetailsTab">
                                                                                                                 <span
                                                                                                                         class="strong"><a
-                                                                                                                                href="#"mArmaLadEs...</a></span><span
+                                                                                                                                href="#"
+                                                                                                                                mArmaLadEs...</a></span><span
                                                                                                                         class="inlinert"></span>
                                                                                                         </div>
                                                                                                         <div
@@ -1428,30 +1423,18 @@
                                                                         </div>
                                                                         <div class="paginglinksmodule">
                                                                                 <div id="paginationBox">
-                                                                                        <div id="pagination">
-                                                                                                <a href="#"
-                                                                                                        class="prev"><b>&lt;</b></a>
-                                                                                                <span class="dots"
-                                                                                                        style="display:none"></span><span
-                                                                                                        class="active"><b>1</b></span>
-                                                                                                <a href="#"
-                                                                                                        class=""><b>2</b></a>
-                                                                                                <a href="#"
-                                                                                                        class=""><b>3</b></a>
-                                                                                                <a href="#"
-                                                                                                        class=""><b>4</b></a>
-                                                                                                <a href="#"
-                                                                                                        class=""><b>5</b></a>
-                                                                                                <a href="#"
-                                                                                                        class=""><b>6</b></a>
-                                                                                                <a href="#"
-                                                                                                        class=""><b>7</b></a>
-                                                                                                <span class="dots"
-                                                                                                        style="">...</span><a
-                                                                                                        href="#"
-                                                                                                        class=""><b>12</b></a>
-                                                                                                <a href="#"
-                                                                                                        class="next"><b>&gt;</b></a>
+                                                                                        <div id="pagination" class="clearfix">        
+                                                                                                <a href="friends_0.html" class=""><b>1</b></a> 
+                                                                                                <a href="friends_1.html" class=""><b>2</b></a> 
+                                                                                                <a href="friends_2.html" class=""><b>3</b></a>
+                                                                                                <a href="friends_3.html" class=""><b>4</b></a> 
+                                                                                                <a href="friends_4.html" class=""><b>5</b></a> 
+                                                                                                <a href="friends_5.html" class=""><b>6</b></a> 
+                                                                                                <a href="friends_6.html" class=""><b>7</b></a> 
+                                                                                                <a href="friends_7.html" class=""><b>8</b></a> 
+                                                                                                <a href="friends_8.html" class=""><b>9</b></a> 
+                                                                                                <a href="friends_9.html" class=""><b>10</b></a> 
+                                                                                                <a href="friends_10.html" class=""><b>11</b></a>
                                                                                         </div>
                                                                                 </div>
                                                                         </div>
@@ -1618,8 +1601,8 @@
         </div>
         <div id="fsfooter">
                 <div id="fsfooterWrapper">
-                        <a href="#" target="_top">Help</a><span
-                                class="plug">|</span><span class="footerLangSelect">Language</span>
+                        <a href="#" target="_top">Help</a><span class="plug">|</span><span
+                                class="footerLangSelect">Language</span>
                         <script>
                                 function switchLanguage(langType) {
                                         var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
@@ -1632,19 +1615,13 @@
                                 <option value="en-US" title="" selected>English</option>
                                 <option value="zh-CN" title="Simplified Chinese">简体中文</option>
                                 <option value="ms-MY" title="Bahasa Malaysia">Malay</option>
-                        </select><a href="#" target="_top"
-                                class="footerSpace">About Us</a><span class="plug">|</span><a
-                                name="&amp;lid=advertise_footerLink"
-                                href="#" target="_top">Advertise</a><span
-                                class="plug">|</span><a href="#" target="_top">Blog</a><span
-                                class="plug">|</span><a href="#" target="_blank">Classifieds</a><span
-                                class="plug">|</span><a href="#"
-                                target="_top">Developers</a><span class="plug">|</span><a
-                                href="#" target="_top">Press
-                                Center</a><span class="plug">|</span><a
-                                href="#" target="_top">Privacy</a><span
-                                class="plug">|</span><a href="#"
-                                target="_top">Terms</a>
+                        </select><a href="#" target="_top" class="footerSpace">About Us</a><span class="plug">|</span><a
+                                name="&amp;lid=advertise_footerLink" href="#" target="_top">Advertise</a><span
+                                class="plug">|</span><a href="#" target="_top">Blog</a><span class="plug">|</span><a
+                                href="#" target="_blank">Classifieds</a><span class="plug">|</span><a href="#"
+                                target="_top">Developers</a><span class="plug">|</span><a href="#" target="_top">Press
+                                Center</a><span class="plug">|</span><a href="#" target="_top">Privacy</a><span
+                                class="plug">|</span><a href="#" target="_top">Terms</a>
                         <div class="pad_3">Copyright 2002-2011 Friendster, Inc. All rights
                                 reserved.<!--phpqcx184.gbxsc.friendster.com--></div>
                 </div>
