--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                                                                                             Friends
                                                                                                       </span> <a
                                                                                                             class="friendCount"
-                                                                                                            href="#">
+                                                                                                            href="friends_0.html">
                                                                                                             (339)
                                                                                                       </a>
                                                                                                 </div>
