--- a/friends_2.html
+++ b/friends_2.html
@@ -453,10 +453,23 @@ LY1();
 </div>
 </div>
 </div></div>
+</div><div class="paginglinksmodule">
+        <div id="paginationBox">
+                <div id="pagination" class="clearfix">        
+                        <a href="friends_0.html" class=""><b>1</b></a> 
+                        <a href="friends_1.html" class=""><b>2</b></a> 
+                        <a href="friends_2.html" class=""><b>3</b></a>
+                        <a href="friends_3.html" class=""><b>4</b></a> 
+                        <a href="friends_4.html" class=""><b>5</b></a> 
+                        <a href="friends_5.html" class=""><b>6</b></a> 
+                        <a href="friends_6.html" class=""><b>7</b></a> 
+                        <a href="friends_7.html" class=""><b>8</b></a> 
+                        <a href="friends_8.html" class=""><b>9</b></a> 
+                        <a href="friends_9.html" class=""><b>10</b></a> 
+                        <a href="friends_10.html" class=""><b>11</b></a>
+                </div>
+        </div>
 </div>
-<div class="paginglinksmodule"><div id="paginationBox"><div id="pagination">
-<a href="#" class="prev"><b>&lt;</b></a> <span class="dots" style="display:none"></span><a href="#" class=""><b>1</b></a> <a href="#" class=""><b>2</b></a> <span class="active"><b>3</b></span> <a href="#" class=""><b>4</b></a> <a href="#" class=""><b>5</b></a> <a href="#" class=""><b>6</b></a> <a href="#" class=""><b>7</b></a> <span class="dots" style="">...</span><a href="#" class=""><b>12</b></a> <a href="#" class="next"><b>&gt;</b></a>
-</div></div></div>
 </div>
 <div id="search2" style="display: none;">
 <div class="commonbox strong sn_green"></div>
