replace all fs links, fix other links ang pagination

--- a/comments_1.html
+++ b/comments_1.html
@@ -593,7 +593,7 @@
                                 function switchLanguage(langType) {
                                         var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
                                         var rUrl = document.location.href;
-                                        url = 'http://www.friendster.com/setlang.php?lang=' + langType + '&updatelang=1&next=' + escape(rUrl);
+                                        url = '#setlang.php?lang=' + langType + '&updatelang=1&next=' + escape(rUrl);
                                         document.location.href = url;
                                 }
                         </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()">
