--- a/friends_0.html
+++ b/friends_0.html
@@ -128,7 +128,7 @@
                                 </ul>
                         </div>
                         <div id="fssrch" class="yui-skin-sam">
-                                <form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
+                                <form action="#search/user" method="get" name="navsearchform">
                                         <input type="text" value="Search" name="query" id="navSearchBox"><input
                                                 type="hidden" value="user" name="stype" id="searchType"><input
                                                 type="hidden" value="user" name="s" id="searchQuery"><input
@@ -1607,7 +1607,7 @@
                                 function switchLanguage(langType) {
                                         var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
                                         var rUrl = document.location.href;
-                                        url = 'http://www.friendster.com/setlang.php?lang=' + langType + '&updatelang=1&next=' + escape(rUrl);
+                                        url = '#setlang.php?lang=' + langType + '&updatelang=1&next=' + escape(rUrl);
                                         document.location.href = url;
                                 }
                         </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()">
