--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                                                                                                       class="tstamp">08/08/2009</span>
                                                                                                 <div
                                                                                                       class="shoutoutlinks">
-                                                                                                      <a href="#"
+                                                                                                      <a href="shoutout_1.html"
                                                                                                             title="">All
                                                                                                             Shoutouts</a>
                                                                                                 </div>
@@ -1358,7 +1358,7 @@
                         function switchLanguage(langType) {
                               var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
                               var rUrl = document.location.href;
-                              url = 'http://www.friendster.com/setlang.php?lang=' + langType + '&updatelang=1&next=' + escape(rUrl);
+                              url = '#setlang.php?lang=' + langType + '&updatelang=1&next=' + escape(rUrl);
                               document.location.href = url;
                         }
                   </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()">
