--- a/photos_160878840_0.html
+++ b/photos_160878840_0.html
@@ -110,7 +110,7 @@ LY1();
 <li><a target="_top" href="#">Join Friendster</a></li>
 </ul></div>
 <div id="fssrch" class="yui-skin-sam">
-<form action="http://www.friendster.com/search/user" method="get" name="navsearchform">
+<form action="#search/user" method="get" name="navsearchform">
 <input type="text" value="Search" name="query" id="navSearchBox"><input type="hidden" value="user" name="stype" id="searchType"><input type="hidden" value="user" name="s" id="searchQuery"><input type="hidden" value="1" name="search"><a onclick="javascript:document.navsearchform.submit(); return false;" href="#" id="navSearchLink">Search</a>
 </form>
 <div id="searchResult"></div>
@@ -150,7 +150,7 @@ LY1();
         /* do not delete albumDesc declaration. needed by fs_photo_details_ui.js */
         var albumDesc = "";
         
-            addthis.button('#atbutton', {}, {url: "http://www.friendster.com/viewphotos.php?a=160878840&uid=10107345", title: "graduation day!!!", description: albumDesc});
+            addthis.button('#atbutton', {}, {url: "#viewphotos.php?a=160878840&uid=10107345", title: "graduation day!!!", description: albumDesc});
         </script><span class="pad_5lr"></span>36 photos</div>
 </div></div>
 <div id="meAction"></div>
@@ -371,7 +371,7 @@ LY1();
         function switchLanguage(langType) {
             var langType = document.getElementById('langSelecter')[document.getElementById('langSelecter').selectedIndex].value;
             var rUrl = document.location.href;
-            url = 'http://www.friendster.com/setlang.php?lang='+langType+'&updatelang=1&next='+escape(rUrl);
+            url = '#setlang.php?lang='+langType+'&updatelang=1&next='+escape(rUrl);
             document.location.href = url;
         }
     </script><select name="languagepref" id="langSelecter" onChange="switchLanguage()"><option value="" disabled>Please Select</option>
