fix see all comments

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                                                             </script>
                                                             <div id="content_18">
                                                                   <div class="viewall"><a
-                                                                              href="view_all_pic.html">See
+                                                                              href="comments_0.html">See
                                                                               All (176)</a></div>
                                                                   <div class="fitem1wrapper">
                                                                         <table class="fitem1table">
